# tldr.py

./: .gitignore  .travis.yml  ChangeLog.md  Makefile  README.md  README.rst  dev-requirements.txt  install.sh  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yml
autocompletion/: tldr.bash
tests/: basic.py  test_config.py  test_find.py  test_init.py  test_list.py  test_locate.py  test_parse.py  test_reindex.py  test_update.py
tests/mock_tldr/pages/: index.json
tldr/: __init__.py  cli.py  config.py  parser.py
