[project]
name = "tldr.py"
version = "0.9.0"
description = "A python client for tldr: simplified and community-driven man pages."
readme = "README.rst"
license = { text = "MIT" }
authors = [
    { name = "lord63", email = "lord63.j@gmail.com" },
]
requires-python = ">=3.10"
keywords = ["tldr", "cli", "man", "command", "usage"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "click>=8.0",
    "PyYAML>=6.0",
]

[project.scripts]
tldr = "tldr.cli:cli"

[project.urls]
Homepage = "https://github.com/lord63/tldr.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tldr"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
